--- a/htmls/New.html
+++ b/htmls/New.html
@@ -12,7 +12,7 @@
     // init Branch
     branch.init('key_live_bnBIJpSQ999I6qbjvSARZigpqug8EGBd',{'no_journeys':true})
     
-      setTimeout(branch.track('pageview');, 10000);
+      setTimeout(branch.track('pageview'), 10000);
 
   </script>
   
