--- a/htmls/New.html
+++ b/htmls/New.html
@@ -16,7 +16,7 @@
                 }
   );
     
-    setTimeout(function(){branch.track('pageview');}, 5000);
+    setTimeout(function(){branch.track('pageview2');}, 5000);
 
   </script>
   
